debian: depend on batman 33 or newer
Signed-off-by: Bardia Moshiri <bardia@furilabs.com>

--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Build-Depends: debhelper,
                libmce-glib-dev (>= 1.0.6),
                ofono-dev (>= 1.29),
                libupower-glib-dev,
-               batman-dev,
-               libbatman-wrappers,
+               batman-dev (>= 33),
+               libbatman-wrappers (>= 33),
 Standards-Version: 3.8.4
 
 Package: ofono-binder-plugin
@@ -21,7 +21,7 @@ Multi-Arch: same
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libofonobinderpluginext (= ${binary:Version}),
-         libbatman-wrappers,
+         libbatman-wrappers (>= 33),
 Description: Binder plugin for the Sailfish OS fork of ofono
 
 Package: ofono-configs-binder-example
